Renamed unit tests according to best practice, moved constant folder names into the LibraryTest class, cleaned up code