@@ -6,23 +6,14 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.List;
 
 public class PDFMetaData implements MetaData {
     public static MetaData getInstance(final InputStream is) {
-        PDDocument document = null;
-        try {
-            document = PDDocument.load(is);
+        try (final PDDocument document = PDDocument.load(is)) {
             return new PDFMetaData(document);
         } catch (IOException exc) {
             throw new IllegalArgumentException(exc);
-        } finally {
-            try {
-                if (document != null) {
-                    document.close();
-                }
-            } catch (IOException exc) { /* intentionally left empty */ }
         }
     }
 
@@ -39,7 +30,7 @@ public class PDFMetaData implements MetaData {
 
     private PDFMetaData(final PDDocument document) {
         this.title = document.getDocumentInformation().getTitle();
-        this.authors = Arrays.asList(document.getDocumentInformation().getAuthor());
+        this.authors = List.of(document.getDocumentInformation().getAuthor());
     }
 
     @Override
